@@ -22,6 +22,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    jvmArgs(['--enable-preview'])
 }
 
 tasks.withType(JavaCompile).each {
